<resources>
    <string name="app_name">Directory Of Organizations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_hotel">Гостиница</string>
    <string name="menu_insurance">Страхование</string>
    <string name="menu_ministry">Министерство</string>
    <string name="menu_bank">Банк</string>
    <string name="menu_prosecutors_tax">Прократура,Налоговые</string>
    <string name="menu_hospital">Клинические больницы</string>

    <string name="home_second">Home Second</string>
    <string name="name_organization">Название организации</string>
    <string name="detail_phone_number">Телефон доверия</string>
    <string name="address_organization">"Адрес организаций "</string>
</resources>
