<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/hotel"
            android:title="@string/menu_hotel" />
        <item
            android:id="@+id/bank"
            android:title="@string/menu_bank" />
        <item
            android:id="@+id/nav_prosecutors"
            android:title="@string/menu_prosecutors_tax" />
        <item
            android:id="@+id/nav_ministries"
            android:title="@string/menu_insurance" />
        <item
            android:id="@+id/nav_hospital"
            android:title="@string/menu_hospital" />
    </group>
</menu>
